# Blackforest

./: Cargo.toml  LICENSE  README.md
benches/: benchmark.rs
datasets/: iris.csv
src/: lib.rs
src/forest/: data.rs  mod.rs
src/tree/: metrics.rs  mod.rs  split.rs
src/utils/: dataset.rs  mod.rs  record.rs
