[package]
name = "blackforest"
version = "1.0.0"
edition = "2021"
authors = ["Divjot Singh <divjot.work@outlook.in>"]
keywords = ["machine-learning", "random-forest", "rust", "ml"]
description = "Random Forest ML implementation in Rust from scratch."
repository = "https://github.com/J0y-B0y/Blackforest"
license = "MIT"

[dependencies]
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
rayon = "1.8"
bincode = "1.3"

[dev-dependencies]
criterion = "0.5"